<resources>
    <string name="app_name">Zoologico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear">Crear</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="listar">Listar</string>
    <string name="clasificacion">Clasificación</string>
    <string name="sexo">Sexo</string>
    <string name="especie">Especie</string>
    <string name="macho">Macho</string>
    <string name="fecha_de_ingreso">Fecha de Ingreso</string>
    <string name="habitat">Habitat</string>
    <string name="alimentaci_n">Alimentación</string>
    <string name="nombre">Nombre</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="id">ID</string>
    <string name="modificar">Modificar</string>
</resources>
