<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/crearM"
            android:icon="@drawable/nuevo"
            android:title="@string/crear" />
        <item
            android:id="@+id/editarM"
            android:icon="@drawable/editar"
            android:title="@string/editar" />
        <item
            android:id="@+id/eliminarM"
            android:icon="@drawable/eliminar"
            android:title="@string/eliminar" />
        <item
            android:id="@+id/listarM"
            android:icon="@drawable/listar"
            android:title="@string/listar" />
    </group>


</menu>
